--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         gap: 2rem;
       }
       .logoContent {
-        background: linear-gradient(green, lightgreen);
+        background: linear-gradient(rgb(4, 159, 4), lightgreen);
         background-clip: text;
         color: transparent;
       }
