--- a/gpa.html
+++ b/gpa.html
@@ -80,9 +80,9 @@
             height: 5rem;
             width: 10rem;
             font-size: large;
-            border: 2px solid linear-gradient(green, lightgreen);
+            border: 2px solid linear-gradient(rgb(0, 79, 128), rgb(7, 132, 174));
             border-radius: 25px;
-            background: linear-gradient(green, lightgreen);
+            background: linear-gradient(rgb(0, 79, 128 ), rgb(7, 132, 174));
         }
 
     </style>
@@ -118,6 +118,8 @@
         <input
           type="number"
           id="c3"
+          # Please enter the commit message for your changes. Lines starting
+          # with '#' will be ignored, and an empty message aborts the commit.
           placeholder="Enter Credit of Sujbect 3"
           required
         />
