--- a/gpa.html
+++ b/gpa.html
@@ -80,9 +80,9 @@
             height: 5rem;
             width: 10rem;
             font-size: large;
-            border: 2px solid linear-gradient(rgb(0, 79, 128), rgb(7, 132, 174));
+            border: 2px linear-gradient(solid green, solid lightgreen);
             border-radius: 25px;
-            background: linear-gradient(rgb(0, 79, 128 ), rgb(7, 132, 174));
+            background: linear-gradient(green, lightgreen);
         }
 
     </style>
