--- a/gpa.html
+++ b/gpa.html
@@ -135,18 +135,36 @@
         <input
           type="number"
           id="c6"
-          placeholder="Enter Credit of Lab 1"
+          placeholder="Enter Credit of Sujbect 6"
           required
         />
         <input
           type="number"
           id="c7"
-          placeholder="Enter Credit of Lab 2"
+          placeholder="Enter Credit of Sujbect 7"
           required
         />
         <input
           type="number"
           id="c8"
+          placeholder="Enter Credit of Sujbect 8"
+          required
+        />
+        <input
+          type="number"
+          id="c9"
+          placeholder="Enter Credit of Lab 1"
+          required
+        />
+        <input
+          type="number"
+          id="c10"
+          placeholder="Enter Credit of Lab 2"
+          required
+        />
+        <input
+          type="number"
+          id="c11"
           placeholder="Enter Credit of Lab 3"
           
         />
@@ -189,18 +207,36 @@
         <input
           type="number"
           id="s6"
-          placeholder="Enter Grade Point of Lab 1"
+          placeholder="Enter Grade Point of Sujbect 6"
           required
         />
         <input
           type="number"
           id="s7"
-          placeholder="Enter Grade Point of Lab 2"
+          placeholder="Enter Grade Point of Sujbect 7"
           required
         />
         <input
           type="number"
           id="s8"
+          placeholder="Enter Grade Point of Sujbect 8"
+          required
+        />
+        <input
+          type="number"
+          id="s9"
+          placeholder="Enter Grade Point of Lab 1"
+          required
+        />
+        <input
+          type="number"
+          id="s10"
+          placeholder="Enter Grade Point of Lab 2"
+          required
+        />
+        <input
+          type="number"
+          id="s11"
           placeholder="Enter Grade Point of Lab 3"
           
         />
