reduced 1 subject added 1 lab

--- a/gpa.html
+++ b/gpa.html
@@ -147,25 +147,25 @@
         <input
           type="number"
           id="c8"
-          placeholder="Enter Credit of Sujbect 8"
-          required
-        />
-        <input
-          type="number"
-          id="c9"
           placeholder="Enter Credit of Lab 1"
           required
         />
         <input
           type="number"
-          id="c10"
+          id="c9"
           placeholder="Enter Credit of Lab 2"
           required
         />
         <input
           type="number"
-          id="c11"
+          id="c10"
           placeholder="Enter Credit of Lab 3"
+          required
+        />
+        <input
+          type="number"
+          id="c11"
+          placeholder="Enter Credit of Lab 4"
           
         />
       </div>
@@ -219,25 +219,25 @@
         <input
           type="number"
           id="s8"
-          placeholder="Enter Grade Point of Sujbect 8"
-          required
-        />
-        <input
-          type="number"
-          id="s9"
           placeholder="Enter Grade Point of Lab 1"
           required
         />
         <input
           type="number"
-          id="s10"
+          id="s9"
           placeholder="Enter Grade Point of Lab 2"
           required
         />
         <input
           type="number"
-          id="s11"
+          id="s10"
           placeholder="Enter Grade Point of Lab 3"
+          required
+        />
+        <input
+          type="number"
+          id="s11"
+          placeholder="Enter Grade Point of Lab 4"
           
         />
 
